--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,9 @@ spring.data.mongodb.host=localhost
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=fisioBD
 
-#security.oauth2.resource.filter-order = 3
+security.oauth2.resource.filter-order=3
+
+#JWT
+jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
+#expira em 7 dias
+jwt.expiration=604800
