configurações para heroku

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.database=fisioBD
-
+spring.data.mongodb.uri=mongodb://user_fsh:ssa105b@ds163850.mlab.com:63850/fshdb
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.database=fisioBD
 security.oauth2.resource.filter-order=3
 
 #JWT
 jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 #expira em 7 dias
-jwt.expiration=604800
+#jwt.expiration=604800
+jwt.expiration=30
