--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,14 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <finalName>api-fisio-mongodb</finalName>
+                </configuration>
+            </plugin>			
 		</plugins>
 	</build>
 
