--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<groupId>br.ba.ssa.fisio</groupId>
 	<artifactId>api-fisio-mongodb</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<packaging>jar</packaging>
+	<packaging>war</packaging>
 
 	<name>api-fisio-mongodb</name>
 	<description>API Rest FisioHome</description>
