--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ jwt.secret=_@HRL&L3tF?Z7ccj4z&L5!nU2B!Rjs3_
 #expira em 7 dias
 jwt.expiration=604800
 #jwt.expiration=30
+
+spring.jpa.show-sql=true
