inicio criacao bd e mapeamentos

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.data.mongodb.uri=mongodb://user_fsh:ssa105b@ds163850.mlab.com:63850/fshdb
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-#spring.data.mongodb.database=fisioBD
+spring.datasource.url=jdbc:mysql://localhost/fshbd
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=ssa105b
+
 security.oauth2.resource.filter-order=3
 
 #JWT
